# product-sbom-vex

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: product-config.md
src/: config.py  main.py  merger.py  vex.py
tests/: conftest.py  test_config.py  test_merge.py  test_vex.py
